Please use ASCII chars

--- a/bio-list.tex
+++ b/bio-list.tex
@@ -5037,6 +5037,8 @@ Max Line length: 70
 \section{Theano}
 \index{Theano}
 
+\TODO{ERROR: USE ONLY ASCII}
+
 Theano is a numerical computation library built for Python programming
 language. Theano uses Numpy syntax for expressing computations that
 can be compiled to run efficiently on both CPU and GPU
@@ -5060,9 +5062,9 @@ hid-sp18-510
 
  
 
-Wordcount: 99
+Wordcount: 102
 
-ERROR: This abstract is too short.
+WARNING: Short Abstract: Is there enough information for a reader to understand what it is?
 
 
 Quote ratio: 0.00 \%
